// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpensesSummary should render ExpensesSummary correctly with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <strong>
        3
      </strong>
       expense(s) totalling 
      <strong>
        $1,141.95
      </strong>
    </h2>
    <div
      className="page_header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`ExpensesSummary should render ExpensesSummary correctly with no expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <strong>
        0
      </strong>
       expense(s) totalling 
      <strong>
        $0.00
      </strong>
    </h2>
    <div
      className="page_header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`ExpensesSummary should render ExpensesSummary correctly with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <strong>
        1
      </strong>
       expense(s) totalling 
      <strong>
        $1.95
      </strong>
    </h2>
    <div
      className="page_header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
